Home work Lesson 03

--- a/CC4E/PersonalWebstite/index.html
+++ b/CC4E/PersonalWebstite/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="shortcut icon" href="./Media/favicon.png">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/yourcode.js"></script>
 </head>
 <body>
     <div class="header-container">
@@ -19,7 +20,43 @@
             <h1 class="greating">Hello I'm Thang</h1>
             <h2>A Programer</h2>
         </div>
-        
+    </div>
+    <div class="contend">
+        <img src="./Media/profile.png" >
+        <h1>Hello</h1>
+        <p>I am an Web Developer. I love Coffe and Noodle</p>
+        <div></div>
+    </div>
+    <div class="skill">
+        <h1>My skills</h1>
+        <div id="skill-01">
+            <img src="./Media/skill1.png">
+            <span>
+                <h2>Design & Development</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam saepe commodi eos nostrum neque consequuntur fugit dolores animi praesentium ratione, unde nesciunt amet sit tempora perferendis velit! Facere, autem?</p>
+            </span>
+        </div>
+        <div id="skill-02">
+            <img src="./Media/skill2.jpg">
+            <span>
+                <h2>Spicy Noodles challenge</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam saepe commodi eos nostrum neque consequuntur fugit dolores animi praesentium ratione, unde nesciunt amet sit tempora perferendis velit! Facere, autem?</p>
+            </span>
+        </div>
+    </div>
+    <div class="contact">
+        <h1>Get In Touch</h1>
+        <h3>If you love spicy noodle as much as I do</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed optio, impedit labore, ratione rem ea voluptatibus illum possimus esse sit at maxime sint amet magnam quasi dolor placeat, neque dicta.</p>
+        <input type="button" value="Contact me">
+    </div>
+    <div class="footer">
+        <ul>
+            <li><a href="#">Linkedin</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Website</a></li>
+        </ul>
+        <p>2022</p>
     </div>
 </body>
 </html>
