finish home work

--- a/CC4E/PersonalWebstite/index.html
+++ b/CC4E/PersonalWebstite/index.html
@@ -33,14 +33,14 @@
             <img src="./Media/skill1.png">
             <span>
                 <h2>Design & Development</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam saepe commodi eos nostrum neque consequuntur fugit dolores animi praesentium ratione, unde nesciunt amet sit tempora perferendis velit! Facere, autem?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam saepe commodi eos nostrum neque consequuntur fugit dolores animi praesentium ratione, unde nesciunt amet sit tempora perferendis velit! Facere, autem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam saepe commodi eos nostrum neque consequuntur fugit dolores animi praesentium ratione, unde nesciunt amet sit tempora perferendis velit! Facere, autem?</p>
             </span>
         </div>
         <div id="skill-02">
             <img src="./Media/skill2.jpg">
             <span>
                 <h2>Spicy Noodles challenge</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam saepe commodi eos nostrum neque consequuntur fugit dolores animi praesentium ratione, unde nesciunt amet sit tempora perferendis velit! Facere, autem?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam saepe commodi eos nostrum neque consequuntur fugit dolores animi praesentium ratione, unde nesciunt amet sit tempora perferendis velit! Facere, autem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam saepe commodi eos nostrum neque consequuntur fugit dolores animi praesentium ratione, unde nesciunt amet sit tempora perferendis velit! Facere, autem?</p>
             </span>
         </div>
     </div>
@@ -52,9 +52,9 @@
     </div>
     <div class="footer">
         <ul>
-            <li><a href="#">Linkedin</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Website</a></li>
+            <li id="link1"><a href="#">Linkedin</a></li>
+            <li id="link2"><a href="#">Twitter</a></li>
+            <li id="link3"><a href="#">Website</a></li>
         </ul>
         <p>2022</p>
     </div>
