--- a/CC4E/HomeWork/PersonalFoodShop/index.html
+++ b/CC4E/HomeWork/PersonalFoodShop/index.html
@@ -53,8 +53,8 @@
             </div>
             <div class="product">
                 <img src="./Media/5.jpg" alt="">
-                <h3></h3>
-                <p></p>
+                <h3>Hamberger</h3>
+                <p>60.000 vnđ</p>
             </div>
             <div class="product">
                 <img src="./Media/1.jpg" alt="">
@@ -78,8 +78,8 @@
             </div>
             <div class="product">
                 <img src="./Media/5.jpg" alt="">
-                <h3></h3>
-                <p></p>
+                <h3>Hamberger</h3>
+                <p>60.000 vnđ</p>
             </div>
         </section>
     </div>
