add responsive Food Shop

--- a/CC4E/HomeWork/PersonalFoodShop/index.html
+++ b/CC4E/HomeWork/PersonalFoodShop/index.html
@@ -32,11 +32,6 @@
                 <p>30.000 vnđ</p>
             </div>
             <div class="product">
-                <img src="./Media/1.jpg" alt="">
-                <h3>Salat</h3>
-                <p>30.000 vnđ</p>
-            </div>
-            <div class="product">
                 <img src="./Media/2.jpg" alt="">
                 <h3>Steck</h3>
                 <p>150.000 vnđ</p>
@@ -67,6 +62,26 @@
                 <p>150.000 vnđ</p>
             </div>
             <div class="product">
+                <img src="./Media/1.jpg" alt="">
+                <h3>Salat</h3>
+                <p>30.000 vnđ</p>
+            </div>
+            <div class="product">
+                <img src="./Media/2.jpg" alt="">
+                <h3>Steck</h3>
+                <p>150.000 vnđ</p>
+            </div>
+            <div class="product">
+                <img src="./Media/1.jpg" alt="">
+                <h3>Salat</h3>
+                <p>30.000 vnđ</p>
+            </div>
+            <div class="product">
+                <img src="./Media/2.jpg" alt="">
+                <h3>Steck</h3>
+                <p>150.000 vnđ</p>
+            </div>
+            <div class="product">
                 <img src="./Media/3.jpg" alt="">
                 <h3>Chicken</h3>
                 <p>100.000 vnđ</p>
@@ -80,6 +95,11 @@
                 <img src="./Media/5.jpg" alt="">
                 <h3>Hamberger</h3>
                 <p>60.000 vnđ</p>
+            </div>
+            <div class="product">
+                <img src="./Media/4.jpg" alt="">
+                <h3>Pizza</h3>
+                <p>120.000 vnđ</p>
             </div>
         </section>
     </div>
