add lesson06 and fix FoodShop

--- a/CC4E/HomeWork/PersonalFoodShop/index.html
+++ b/CC4E/HomeWork/PersonalFoodShop/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="product">
                 <img src="./Media/5.jpg" alt="">
-                <h3>Hamberger</h3>
+                <h3>Hamburger</h3>
                 <p>60.000 vnđ</p>
             </div>
             <div class="product">
@@ -93,7 +93,7 @@
             </div>
             <div class="product">
                 <img src="./Media/5.jpg" alt="">
-                <h3>Hamberger</h3>
+                <h3>Hamburger</h3>
                 <p>60.000 vnđ</p>
             </div>
             <div class="product">
@@ -103,6 +103,9 @@
             </div>
         </section>
     </div>
+    <footer>
+        <p class="copyRight">Copyright © 2023-2023 Website provide by ThangDoDinh</p>
+    </footer>
 </body>
 
 </html>
