--- a/CC4E/Lesson/Lesson07/index.html
+++ b/CC4E/Lesson/Lesson07/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>hello JavaScript</h1>
     <h2>Test branch DoThang</h2>
+    <h3>Test branch DoThang #2</h3>
     <script src="index.js"/>
 </body>
 </html>
