--- a/CC4E/Project-C4E138/roomDetail.html
+++ b/CC4E/Project-C4E138/roomDetail.html
@@ -136,8 +136,7 @@
                     </p>
                 </div>
                 <div class="col-md-10 col-lg-6 col-xl-5">
-                    <img class="slideInLeft"
-                        src="https://livedemo00.template-help.com/wt_prod-19522/images/job-portal-1-570x368.jpg" alt="">
+                    <img class="slideInLeft" src="./Image/room01.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -145,7 +144,7 @@
 
     <div id="section-our-rooms">
         <div class="container">
-            <h1 class="my-title">
+            <h1 class="my-title" style="padding-bottom: 50px;">
                 <span style="font-style: italic; font-weight: 500;">Our</span> Rooms
             </h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -199,7 +198,7 @@
 
     <div id="service" style="background-color: #f5f6fa;">
         <div class="container">
-            <h1 class="my-title">
+            <h1 class="my-title" style="padding-bottom: 50px;">
                 Right Services <span style="font-style: italic; font-weight: 500;">for Great Customers</span>
             </h1>
             <div class="row">
@@ -263,7 +262,7 @@
 
     <div id="section-news">
         <div class="container">
-            <h1 class="my-title">
+            <h1 class="my-title" style="padding-bottom: 50px;">
                 <span style="font-style: italic; font-weight: 500;">Latest</span> NEWS
             </h1>
             <div class="row">
