--- a/CC4E/Test-C4E138/UI-test/index.html
+++ b/CC4E/Test-C4E138/UI-test/index.html
@@ -36,7 +36,7 @@
                             <a class="nav-link" href="#">New users</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Voters</a>
+                            <a class="nav-link" href="./list.html">Voters</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Editors</a>
